--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "echo \"no lint setup\""
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "framer-motion": "^12.34.3",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
@@ -24,6 +25,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
-    "vite": "^5.4.19"
+    "vite": "^7.3.1"
   }
 }
